k8s/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-manager-api-service
  namespace: task-api
spec:
  selector:
    app: task-manager-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
